2013-11-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Set pdf_version in extractbb to be PDF_VERSION_MAX.

2013-11-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfobj.c: Correct %c to %d since pdf_version is unsigned int.
	Fix a typo.

2013-10-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, /ac/withenable.ac, configure.ac: Use libs/paper.

2013-10-12  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c, dvicodes.h: Rename XDVI_ID to XDV_ID.

2013-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop the useless KPSE_LT_HACK.
	Drop the redundant AC_HEADER_STDC and check for mkstemp.

2013-09-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* epdf.c, pdfdraw.c, pdfobj.c, pdfximage.c, spc_color.c,
	spc_color.c, specials.c: These files are now identical for dvipdfmx
	and xdvipdfmx and are part of libutil.a.
	* Makefile.am: Adapted.

	* spc_pdfm.c: Reduced dvipdfmx/xdvipdfmx diffs.

2013-09-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bmpimage.c, dpxfile.c, pdfparse.c, spc_html.c, spc_tpic.c:
	These files are now identical for dvipdfmx and xdvipdfmx and are
	part of libutil.a.
	* Makefile.am: Adapted.

	* cff_dict.c, pdfdraw.c, pdfobj.[ch], pdfximage.[ch],
	tt_table.c, type1.c: Reduced dvipdfmx/xdvipdfmx diffs.

2013-09-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfnames.c: Fix (x)dvipdfm-bkm.test (notjump).

2013-09-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfnames.[ch], pdfobj.c, specials.c: Fix (x)dvipdfm-res.test
	(tikz-bug).

	* tests/annot.{dvi,tex}: Test a broken link annotation.

2013-09-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxcrypt.h, dpxcrypt.c: Use uint32_t instead of unsigned long to
	calculate MD5, because it leads to an error if compiled with clang
	on 64bit OS X, reported by T. Yamamoto.

2013-09-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* (x)dvipdfm-bkm.test: Additional tests with bookmarks.
	* tests/bookm.{dvi,tex}: Additional test input files.
	* Makefile.am: Adapted.
